--- a/module/webroot/index.html
+++ b/module/webroot/index.html
@@ -800,6 +800,10 @@ body.light-theme #error-overlay {
 <button class="list-btn" data-i18n="ipset_custom" data-tab="tab-ipset-custom">IPSet Custom</button>
 <button class="list-btn" data-i18n="ipset_exclude" data-tab="tab-ipset-exclude">IPSet Exclude</button>
 <button class="list-btn" data-i18n="dnscrypt_custom" data-tab="tab-dnscrypt-custom">DNSCrypt Custom</button>
+<button class="list-btn" data-i18n="dnscrypt_blocked_names" data-tab="tab-dnscrypt-blocked-names">DNSCrypt Blocked Names</button>
+<button class="list-btn" data-i18n="dnscrypt_blocked_ips" data-tab="tab-dnscrypt-blocked-ips">DNSCrypt Blocked IPs</button>
+<button class="list-btn" data-i18n="dnscrypt_allowed_names" data-tab="tab-dnscrypt-allowed-names">DNSCrypt Allowed Names</button>
+<button class="list-btn" data-i18n="dnscrypt_allowed_ips" data-tab="tab-dnscrypt-allowed-ips">DNSCrypt Allowed IPs</button>
 </div>
 <div class="tab-content-wrapper">
 <div class="tab-content active" id="tab-list-custom">
@@ -862,21 +866,81 @@ body.light-theme #error-overlay {
 <button class="btn btn-save" data-i18n="btn_save" data-path="ipset/exclude.txt">Сохранить</button>
 </div>
 </div>
-<div class="tab-content" id="tab-dnscrypt-custom">
-<textarea id="file-dnscrypt-custom" rows="10"></textarea>
-<div class="textarea-footer">
-<span class="line-counter" data-i18n-base="line_counter">
+        <div class="tab-content" id="tab-dnscrypt-custom">
+            <textarea id="file-dnscrypt-custom" rows="10"></textarea>
+            <div class="textarea-footer">
+                <span class="line-counter" data-i18n-base="line_counter">
           Строк: 0
-         </span>
-<button class="btn btn-icon btn-clear" data-i18n-title="btn_clear_title" data-target="file-dnscrypt-custom">
-<svg viewbox="0 0 24 24">
-<path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z">
-</path>
-</svg>
-</button>
-<button class="btn btn-save" data-i18n="btn_save" data-path="dnscrypt/custom-cloaking-rules.txt">Сохранить</button>
-</div>
-</div>
+                 </span>
+                <button class="btn btn-icon btn-clear" data-i18n-title="btn_clear_title" data-target="file-dnscrypt-custom">
+                    <svg viewbox="0 0 24 24">
+                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z">
+                        </path>
+                    </svg>
+                </button>
+                <button class="btn btn-save" data-i18n="btn_save" data-path="dnscrypt/custom-cloaking-rules.txt">Сохранить</button>
+            </div>
+        </div>
+        <div class="tab-content" id="tab-dnscrypt-blocked-names">
+            <textarea id="file-dnscrypt-blocked-names" rows="10"></textarea>
+            <div class="textarea-footer">
+                <span class="line-counter" data-i18n-base="line_counter">
+          Строк: 0
+                </span>
+                <button class="btn btn-icon btn-clear" data-i18n-title="btn_clear_title" data-target="file-dnscrypt-blocked-names">
+                    <svg viewbox="0 0 24 24">
+                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z">
+                        </path>
+                    </svg>
+                </button>
+                <button class="btn btn-save" data-i18n="btn_save" data-path="dnscrypt/custom-blocked-names.txt">Сохранить</button>
+            </div>
+        </div>
+        <div class="tab-content" id="tab-dnscrypt-blocked-ips">
+            <textarea id="file-dnscrypt-blocked-ips" rows="10"></textarea>
+            <div class="textarea-footer">
+                <span class="line-counter" data-i18n-base="line_counter">
+          Строк: 0
+                </span>
+                <button class="btn btn-icon btn-clear" data-i18n-title="btn_clear_title" data-target="file-dnscrypt-blocked-ips">
+                    <svg viewbox="0 0 24 24">
+                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z">
+                        </path>
+                    </svg>
+                </button>
+                <button class="btn btn-save" data-i18n="btn_save" data-path="dnscrypt/custom-blocked-ips.txt">Сохранить</button>
+            </div>
+        </div>
+        <div class="tab-content" id="tab-dnscrypt-allowed-names">
+            <textarea id="file-dnscrypt-allowed-names" rows="10"></textarea>
+            <div class="textarea-footer">
+                <span class="line-counter" data-i18n-base="line_counter">
+          Строк: 0
+                </span>
+                <button class="btn btn-icon btn-clear" data-i18n-title="btn_clear_title" data-target="file-dnscrypt-allowed-names">
+                    <svg viewbox="0 0 24 24">
+                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z">
+                        </path>
+                    </svg>
+                </button>
+                <button class="btn btn-save" data-i18n="btn_save" data-path="dnscrypt/custom-allowed-names.txt">Сохранить</button>
+            </div>
+        </div>
+        <div class="tab-content" id="tab-dnscrypt-allowed-ips">
+            <textarea id="file-dnscrypt-allowed-ips" rows="10"></textarea>
+            <div class="textarea-footer">
+                <span class="line-counter" data-i18n-base="line_counter">
+          Строк: 0
+                </span>
+                <button class="btn btn-icon btn-clear" data-i18n-title="btn_clear_title" data-target="file-dnscrypt-allowed-ips">
+                    <svg viewbox="0 0 24 24">
+                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z">
+                        </path>
+                    </svg>
+                </button>
+                <button class="btn btn-save" data-i18n="btn_save" data-path="dnscrypt/custom-allowed-ips.txt">Сохранить</button>
+            </div>
+        </div>
 </div>
 </div>
 </main>
@@ -1102,6 +1166,10 @@ body.light-theme #error-overlay {
                 "ipset_custom": "IPSet Custom",
                 "ipset_exclude": "IPSet Exclude",
                 "dnscrypt_custom": "Пользовательский cloaking-rules.txt",
+                "dnscrypt_blocked_names": "Пользовательский blocked-names.txt",
+                "dnscrypt_blocked_ips": "Пользовательский blocked-ips.txt",
+                "dnscrypt_allowed_names": "Пользовательский allowed-names.txt",
+                "dnscrypt_allowed_ips": "Пользовательский allowed-ips.txt",
                 "line_counter": "Строк: {count}",
                 "btn_clear_title": "Очистить список",
                 "btn_save": "Сохранить",
@@ -1154,6 +1222,10 @@ body.light-theme #error-overlay {
                 "ipset_custom": "IPSet Custom",
                 "ipset_exclude": "IPSet Exclude",
                 "dnscrypt_custom": "Custom cloaking-rules.txt",
+                "dnscrypt_blocked_names": "Custom blocked-names.txt",
+                "dnscrypt_blocked_ips": "Custom blocked-ips.txt",
+                "dnscrypt_allowed_names": "Custom allowed-names.txt",
+                "dnscrypt_allowed_ips": "Custom allowed-ips.txt",
                 "line_counter": "Lines: {count}",
                 "btn_clear_title": "Clear list",
                 "btn_save": "Save",
@@ -1320,12 +1392,23 @@ async function waitForPidChange(oldPid, timeout = 5000) {
                     'list/exclude.txt': document.getElementById('file-list-exclude'),
                     'ipset/custom.txt': document.getElementById('file-ipset-custom'),
                     'ipset/exclude.txt': document.getElementById('file-ipset-exclude'),
-                    'dnscrypt/custom-cloaking-rules.txt': document.getElementById('file-dnscrypt-custom')
+                    'dnscrypt/custom-cloaking-rules.txt': document.getElementById('file-dnscrypt-custom'),
+                    'dnscrypt/custom-blocked-names.txt': document.getElementById('file-dnscrypt-blocked-names'),
+                    'dnscrypt/custom-blocked-ips.txt': document.getElementById('file-dnscrypt-blocked-ips'),
+                    'dnscrypt/custom-allowed-names.txt': document.getElementById('file-dnscrypt-allowed-names'),
+                    'dnscrypt/custom-allowed-ips.txt': document.getElementById('file-dnscrypt-allowed-ips')
                 };
                 const isDirty = {};
                 Object.keys(fileContents).forEach(path => {
                     isDirty[path] = false;
                 });
+                const dnscryptCustomScriptsMap = {
+                    'dnscrypt/custom-cloaking-rules.txt': 'custom-cloaking-rules.sh',
+                    'dnscrypt/custom-blocked-names.txt': 'custom-blocked-names.sh',
+                    'dnscrypt/custom-blocked-ips.txt': 'custom-blocked-ips.sh',
+                    'dnscrypt/custom-allowed-names.txt': 'custom-allowed-names.sh',
+                    'dnscrypt/custom-allowed-ips.txt': 'custom-allowed-ips.sh'
+                };
                 const updateStatusIndicator = (element, status) => {
                     const textEl = element.querySelector('.text');
                     if (status === 'Running') {
@@ -1432,6 +1515,10 @@ async function waitForPidChange(oldPid, timeout = 5000) {
                         const ipsetCustom = await run(`cat ${MODPATH}/ipset/custom.txt 2>/dev/null || true`);
                         const ipsetExclude = await run(`cat ${MODPATH}/ipset/exclude.txt 2>/dev/null || true`);
                         const dnscryptCustom = await run(`cat ${MODPATH}/dnscrypt/custom-cloaking-rules.txt 2>/dev/null || true`);
+                        const dnscryptCustomBlockedNames = await run(`cat ${MODPATH}/dnscrypt/custom-blocked-names.txt 2>/dev/null || true`);
+                        const dnscryptCustomBlockedIps = await run(`cat ${MODPATH}/dnscrypt/custom-blocked-ips.txt 2>/dev/null || true`);
+                        const dnscryptCustomAllowedNames = await run(`cat ${MODPATH}/dnscrypt/custom-allowed-names.txt 2>/dev/null || true`);
+                        const dnscryptCustomAllowedIps = await run(`cat ${MODPATH}/dnscrypt/custom-allowed-ips.txt 2>/dev/null || true`);
                         const zapretLogs = await run(`cat ${MODPATH}/zapret/latest.log 2>/dev/null || true`);
                         const dnscryptLogs = await run(`cat ${MODPATH}/dnscrypt/latest.log 2>/dev/null || true`);
                         currentzapretLogText = zapretLogs;
@@ -1485,6 +1572,10 @@ async function waitForPidChange(oldPid, timeout = 5000) {
                                     case 'ipset/custom.txt': content = ipsetCustom; break;
                                     case 'ipset/exclude.txt': content = ipsetExclude; break;
                                     case 'dnscrypt/custom-cloaking-rules.txt': content = dnscryptCustom; break;
+                                    case 'dnscrypt/custom-blocked-names.txt': content = dnscryptCustomBlockedNames; break;
+                                    case 'dnscrypt/custom-blocked-ips.txt': content = dnscryptCustomBlockedIps; break;
+                                    case 'dnscrypt/custom-allowed-names.txt': content = dnscryptCustomAllowedNames; break;
+                                    case 'dnscrypt/custom-allowed-ips.txt': content = dnscryptCustomAllowedIps; break;
                                 }
                                 textarea.value = content;
                             }
@@ -1621,6 +1712,11 @@ btnPrimary.addEventListener('click', async () => {
                         const path = button.dataset.path;
                         const content = fileContents[path].value.replace(/'/g, "'\\''");
                         await run(`echo '${content}' > ${MODPATH}/${path}`);
+                        const scriptName = dnscryptCustomScriptsMap[path];
+                        if (scriptName) {
+                            await run(`sh ${MODPATH}/dnscrypt/${scriptName} disappend >/dev/null 2>&1 || true`);
+                            await run(`sh ${MODPATH}/dnscrypt/${scriptName} append >/dev/null 2>&1 || true`);
+                        }
                         isDirty[path] = false;
                     });
                 });
